--- a/starterSource/starterSource/index.html
+++ b/starterSource/starterSource/index.html
@@ -24,4 +24,20 @@
   <div class="kitchen-equipment">
 
   </div>
+  <div class ="textSection">
+      <h3>EQUIPMENT</h3>
+      <ul>
+        <li>Cake tin or muffin tray</li>
+        <li>Large mixing bowl</li>
+        <li>Electrix mixer</li>
+        <li>Cooling rack</li>
+        <li>Fork</li>
+        <li>Weighing scales</li>
+        <li>Smaller bowls, to hold ingredients</li>
+      </ul>
+  </div>
+  <div class="cake-ingredients">
+    
+  </div>
+
 </html>
