--- a/starterSource/starterSource/index.html
+++ b/starterSource/starterSource/index.html
@@ -6,7 +6,9 @@
   </head>
   
   <div class="cd-logo">
-    
+    <div class="caption">
+      <span class="border" >RECIPES WITH CODERDOJO</span>
+    </div>
   </div>
   
   <div class="textSection">
@@ -37,7 +39,7 @@
       </ul>
   </div>
   <div class="cake-ingredients">
-    
+
   </div>
 
 </html>
